--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,6 +1,6 @@
 FROM python:3.11-slim
 
-# Install system dependencies for Manim
+# Install system dependencies for Manim including build tools
 RUN apt-get update && apt-get install -y \
     ffmpeg \
     libcairo2-dev \
@@ -9,12 +9,16 @@ RUN apt-get update && apt-get install -y \
     texlive-latex-base \
     texlive-fonts-recommended \
     libffi-dev \
+    build-essential \
+    gcc \
+    pkg-config \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
