--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.89.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "framer-motion": "^11.15.0",
+    "geist": "^1.5.1",
     "lucide-react": "^0.468.0",
     "next": "16.0.10",
     "postgres": "^3.4.7",
