--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,11 +24,16 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.89.0",
     "@tabler/icons-react": "^3.36.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "framer-motion": "^11.15.0",
+    "fumadocs-core": "^16.4.7",
+    "fumadocs-mdx": "^14.2.5",
+    "fumadocs-ui": "^16.4.7",
     "geist": "^1.5.1",
     "lucide-react": "^0.562.0",
     "motion": "^12.26.2",
@@ -48,8 +53,8 @@
     "@types/react-dom": "^19.1.0",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.8",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.7.2"
   }
 }
