feat: imagegen added with proper error handling of manim backend with major fixes version2

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,8 @@ pydantic-settings>=2.0.0
 aiofiles>=23.2.1
 httpx>=0.26.0
 google-generativeai>=0.7,<0.8
+google-genai>=1.0.0
+Pillow>=9.1.0,<10.0
 uvicorn[standard]>=0.35.0
 python-socketio[asyncio]>=5.11.0
 bidict>=0.23.0
