--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "bun --bun next dev",
-    "build": "bun --bun next build",
-    "start": "bun --bun next start",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "eslint .",
     "db:migrate": "bun run lib/db/migrate.ts",
     "db:generate": "drizzle-kit generate",
@@ -38,6 +38,8 @@
     "lucide-react": "^0.562.0",
     "motion": "^12.26.2",
     "next": "16.0.10",
+    "plyr": "^3.8.4",
+    "plyr-react": "^6.0.0",
     "postgres": "^3.4.7",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.1.0",
